# lrcfilter

./: .coverage  .pre-commit-config.yaml  ARCHITECTURE.md  CODE_OF_CONDUCT.md  Dockerfile  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
lrcfilter/: __init__.py  __main__.py  analyzer.py  censorship.py  config.py  instrumental.py  logging_config.py  lyrics.py  metadata.py  mismatch.py  models.py  output.py  pipeline.py  scanner.py  utils.py
tests/: conftest.py  test_analyzer.py  test_censorship.py  test_cli.py  test_config_wiring.py  test_instrumental.py  test_logging_config.py  test_lyrics.py  test_lyrics_fetching.py  test_metadata.py  test_metadata_extraction.py  test_mismatch.py  test_output.py  test_parameter_validation.py  test_pipeline_integration.py  test_scanner.py  test_utils.py
